# textedit

./: bun.lockb  package-lock.json  package.json
textedit/: bun.lockb  d  package-lock.json  package.json  vite.config.js
textedit/src/: App.jsx  main.jsx
textedit/src-tauri/: Cargo.toml  tauri.conf.json
textedit/src-tauri/capabilities/: default.json
textedit/src-tauri/src/: main.rs
